<resources>
    <string name="app_name">COVID-19 Monitor</string>
    <string name="title">Coronavirus live update</string>
    <string name="no_connection">No internet connection</string>
    <string name="title_widget_1">C</string>
    <string name="title_widget_2">VID-19</string>

    <string name="title_country">Write your country name in English, please</string>

    <string name="hint_country">Your country name…</string>

    <string name="world">World</string>
    <string name="russia">Russia</string>
    <string name="appwidget_text_cases">loading…</string>
    <string name="appwidget_text_re">loading…</string>
    <string name="appwidget_text_death">loading…</string>
    <string name="nothing">---</string>

    <string name="powered_by">Powered by</string>

    <string name="add_widget">Add widget</string>

    <string-array name="string_array_country">
        <item> Choose your country… </item>
        <item>	Afghanistan	</item>
        <item>	Albania	</item>
        <item>	Algeria	</item>
        <item>	Andorra	</item>
        <item>	Angola	</item>
        <item>	Anguilla	</item>
        <item>	Antigua and Barbuda	</item>
        <item>	Argentina	</item>
        <item>	Armenia	</item>
        <item>	Aruba	</item>
        <item>	Australia	</item>
        <item>	Austria	</item>
        <item>	Azerbaijan	</item>
        <item>	Bahamas	</item>
        <item>	Bahrain	</item>
        <item>	Bangladesh	</item>
        <item>	Barbados	</item>
        <item>	Belarus	</item>
        <item>	Belgium	</item>
        <item>	Belize	</item>
        <item>	Benin	</item>
        <item>	Bermuda	</item>
        <item>	Bhutan	</item>
        <item>	Bolivia	</item>
        <item>	Bosnia and Herzegovina	</item>
        <item>	Botswana	</item>
        <item>	Brazil	</item>
        <item>	British Virgin Islands	</item>
        <item>	Brunei	</item>
        <item>	Bulgaria	</item>
        <item>	Burkina Faso	</item>
        <item>	Burundi	</item>
        <item>	Cabo Verde	</item>
        <item>	Cambodia	</item>
        <item>	Cameroon	</item>
        <item>	Canada	</item>
        <item>	CAR	</item>
        <item>	Caribbean Netherlands	</item>
        <item>	Cayman Islands	</item>
        <item>	Chad	</item>
        <item>	Channel Islands	</item>
        <item>	Chile	</item>
        <item>	China	</item>
        <item>	Colombia	</item>
        <item>	Congo	</item>
        <item>	Costa Rica	</item>
        <item>	Croatia	</item>
        <item>	Cuba	</item>
        <item>	Curaçao	</item>
        <item>	Cyprus	</item>
        <item>	Czechia	</item>
        <item>	Denmark	</item>
        <item>	Djibouti	</item>
        <item>	Dominica	</item>
        <item>	Dominican Republic	</item>
        <item>	DRC	</item>
        <item>	Ecuador	</item>
        <item>	Egypt	</item>
        <item>	El Salvador	</item>
        <item>	Equatorial Guinea	</item>
        <item>	Eritrea	</item>
        <item>	Estonia	</item>
        <item>	Eswatini	</item>
        <item>	Ethiopia	</item>
        <item>	Faeroe Islands	</item>
        <item>	Falkland Islands	</item>
        <item>	Fiji	</item>
        <item>	Finland	</item>
        <item>	France	</item>
        <item>	French Guiana	</item>
        <item>	French Polynesia	</item>
        <item>	Gabon	</item>
        <item>	Gambia	</item>
        <item>	Georgia	</item>
        <item>	Germany	</item>
        <item>	Ghana	</item>
        <item>	Gibraltar	</item>
        <item>	Greece	</item>
        <item>	Greenland	</item>
        <item>	Grenada	</item>
        <item>	Guadeloupe	</item>
        <item>	Guatemala	</item>
        <item>	Guinea	</item>
        <item>	Guinea-Bissau	</item>
        <item>	Guyana	</item>
        <item>	Haiti	</item>
        <item>	Honduras	</item>
        <item>	Hong Kong	</item>
        <item>	Hungary	</item>
        <item>	Iceland	</item>
        <item>	India	</item>
        <item>	Indonesia	</item>
        <item>	Iran	</item>
        <item>	Iraq	</item>
        <item>	Ireland	</item>
        <item>	Isle of Man	</item>
        <item>	Israel	</item>
        <item>	Italy	</item>
        <item>	Ivory Coast	</item>
        <item>	Jamaica	</item>
        <item>	Japan	</item>
        <item>	Jordan	</item>
        <item>	Kazakhstan	</item>
        <item>	Kenya	</item>
        <item>	Kuwait	</item>
        <item>	Kyrgyzstan	</item>
        <item>	Laos	</item>
        <item>	Latvia	</item>
        <item>	Lebanon	</item>
        <item>	Liberia	</item>
        <item>	Libya	</item>
        <item>	Liechtenstein	</item>
        <item>	Lithuania	</item>
        <item>	Luxembourg	</item>
        <item>	Macao	</item>
        <item>	Madagascar	</item>
        <item>	Malawi	</item>
        <item>	Malaysia	</item>
        <item>	Maldives	</item>
        <item>	Mali	</item>
        <item>	Malta	</item>
        <item>	Martinique	</item>
        <item>	Mauritania	</item>
        <item>	Mauritius	</item>
        <item>	Mayotte	</item>
        <item>	Mexico	</item>
        <item>	Moldova	</item>
        <item>	Monaco	</item>
        <item>	Mongolia	</item>
        <item>	Montenegro	</item>
        <item>	Montserrat	</item>
        <item>	Morocco	</item>
        <item>	Mozambique	</item>
        <item>	Myanmar	</item>
        <item>	Namibia	</item>
        <item>	Nepal	</item>
        <item>	Netherlands	</item>
        <item>	New Caledonia	</item>
        <item>	New Zealand	</item>
        <item>	Nicaragua	</item>
        <item>	Niger	</item>
        <item>	Nigeria	</item>
        <item>	North Macedonia	</item>
        <item>	Norway	</item>
        <item>	Oman	</item>
        <item>	Pakistan	</item>
        <item>	Palestine	</item>
        <item>	Panama	</item>
        <item>	Papua New Guinea	</item>
        <item>	Paraguay	</item>
        <item>	Peru	</item>
        <item>	Philippines	</item>
        <item>	Poland	</item>
        <item>	Portugal	</item>
        <item>	Qatar	</item>
        <item>	Romania	</item>
        <item>	Russia	</item>
        <item>	Rwanda	</item>
        <item>	Réunion	</item>
        <item>	S. Korea	</item>
        <item>	Saint Kitts and Nevis	</item>
        <item>	Saint Lucia	</item>
        <item>	Saint Martin	</item>
        <item>	Saint Pierre Miquelon	</item>
        <item>	San Marino	</item>
        <item>	Sao Tome and Principe	</item>
        <item>	Saudi Arabia	</item>
        <item>	Senegal	</item>
        <item>	Serbia	</item>
        <item>	Seychelles	</item>
        <item>	Sierra Leone	</item>
        <item>	Singapore	</item>
        <item>	Sint Maarten	</item>
        <item>	Slovakia	</item>
        <item>	Slovenia	</item>
        <item>	Somalia	</item>
        <item>	South Africa	</item>
        <item>	South Sudan	</item>
        <item>	Spain	</item>
        <item>	Sri Lanka	</item>
        <item>	St. Barth	</item>
        <item>	St. Vincent Grenadines	</item>
        <item>	Sudan	</item>
        <item>	Suriname	</item>
        <item>	Sweden	</item>
        <item>	Switzerland	</item>
        <item>	Syria	</item>
        <item>	Taiwan	</item>
        <item>	Tanzania	</item>
        <item>	Thailand	</item>
        <item>	Timor-Leste	</item>
        <item>	Togo	</item>
        <item>	Trinidad and Tobago	</item>
        <item>	Tunisia	</item>
        <item>	Turkey	</item>
        <item>	Turks and Caicos	</item>
        <item>	UAE	</item>
        <item>	Uganda	</item>
        <item>	UK	</item>
        <item>	Ukraine	</item>
        <item>	Uruguay	</item>
        <item>	USA	</item>
        <item>	Uzbekistan	</item>
        <item>	Vatican City	</item>
        <item>	Venezuela	</item>
        <item>	Vietnam	</item>
        <item>	Western Sahara	</item>
        <item>	Yemen	</item>
        <item>	Zambia	</item>
        <item>	Zimbabwe </item>

    </string-array>
</resources>
